# Paperless-macOCR

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
scripts/: test_local_pdf.py
src/paperless_macocr/: __init__.py  __main__.py  app.py  auth.py  config.py  ocr.py  paperless.py  pdf.py  web.py
src/paperless_macocr/templates/: base.html  documents.html  login.html  preview.html
tests/: test_app.py  test_ocr.py  test_pdf.py
