[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperless-macocr"
version = "1.0.0"
description = "Paperless-NGX webhook service that re-OCRs documents using macOCR (Apple Vision Framework)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Ole Schicketanz" },
]
keywords = ["paperless-ngx", "ocr", "macocr", "apple-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pymupdf>=1.25",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[project.scripts]
paperless-macocr = "paperless_macocr.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_macocr"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["S104"]  # Possible binding to all interfaces

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
